--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "nodemailer": "^6.7.7",
+    "nodemailer-express-handlebars": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.1",
+    "@types/nodemailer": "^6.4.5",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
     "nodemon": "^2.0.19",
     "ts-node": "^10.8.2"
   }
