--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongoose": "^6.4.3",
     "nodemailer": "^6.7.7",
     "nodemailer-express-handlebars": "^5.0.0"
@@ -27,6 +28,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/md5": "^2.3.2",
     "@types/node": "^18.0.1",
     "@types/nodemailer": "^6.4.5",
     "@types/nodemailer-express-handlebars": "^4.0.2",
