--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "flutterwave-node-v3": "^1.0.11",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
